# porterm

./: .gitignore  Cargo.toml  README.md  index.html  style.css  wrangler.toml
.github/workflows/: deploy.yml
assets/articles/: dmm_intern_2025.md  index.json  test_article.md
src/: lib.rs  main.rs  worker.js
src/components/: bar.rs  blog.rs  github.rs  mod.rs  placeholder.rs  profile.rs  window.rs
