[package]
name = "porterm"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.6"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
